--- a/API/Admin/Pages/ProductPage/Get.razor
+++ b/API/Admin/Pages/ProductPage/Get.razor
@@ -32,7 +32,7 @@
             <th>Trạng Thái</th>
             <th>Khác</th>
         </tr>
-        @foreach (Product item in PaginatedProducts)
+        @foreach (var item in PaginatedProducts)
         {
             <tr>
                 <td>@item.Name</td>
@@ -46,7 +46,6 @@
                         <span>Không có hình ảnh</span>
                     }
                 </td>
-                <td>@item.Rate</td>
                 <td>@item.Categories.Name</td>
                 <td>
                     @{
@@ -72,7 +71,7 @@
         <ul class="pagination">
             <li class="page-item">
                 <a class="page-link" @onclick="PreviousPage" disabled="@(!CanGoBack)">
-                    <span aria-hidden="true"><i class="fa-light fa-hand-point-left" ></i></span>
+                    <span aria-hidden="true"><i class="fa-regular fa-hand-point-left" ></i></span>
                 </a>
             </li>
             <li class="page-item"><span class="page-link text-black">Trang @currentPage trên @totalPages</span></li>
@@ -95,8 +94,11 @@
     private int RoleID = 0;
 
     public List<Product> product { get; set; } = new List<Product>();
+    public List<Product> Fproduct { get; set; } = new List<Product>();
 
-    private List<Product> PaginatedProducts => product.Skip((currentPage - 1) * pageSize).Take(pageSize).ToList();
+
+
+    private List<Product> PaginatedProducts => Fproduct.Skip((currentPage - 1) * pageSize).Take(pageSize).ToList();
     private int currentPage = 1;
     private int pageSize = 10;
     private int totalPages => (int)Math.Ceiling((double)product.Count / pageSize);
@@ -109,20 +111,14 @@
         await GetSession();
     }
 
-    private async void OnSearchClicked()
+    private async Task OnSearchClicked()
     {
-        if (string.IsNullOrEmpty(searchQuery))
-        {
-            await CallAPI();
-        }
-        else
-        {
             ApplyFilters();
-        }
+       
         currentPage = 1;
     }
 
-    private async void sortStatus(ChangeEventArgs e)
+    private async Task sortStatus(ChangeEventArgs e)
     {
         selectedStatus = e.Value.ToString();
         ApplyFilters();
@@ -183,7 +179,7 @@
                 p.Categories.Name.ToLower().Contains(lowerQuery));
         }
 
-        product = filtered.ToList();
+        Fproduct = filtered.ToList();
     }
 
     private string GetImagePath(string imageName) => $"{imageBasePath}{imageName}";
