login-user-fixxong

--- a/API/WebTraSua/Pages/CartPage/OrderSummary.razor
+++ b/API/WebTraSua/Pages/CartPage/OrderSummary.razor
@@ -92,7 +92,20 @@
             margin-top : 22px;
         }
 
-   
+    .order-summary button {
+        background-color: #333;
+        color: #fff;
+        font-size: 18px;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        display: block;
+        width: 100%;
+        text-align: center;
+        margin-top: 20px;
+    }
+
       
 
 </style>
